data/derived/sp14/progs/unify/prog1445.ml.out
Characters 35-40:
  let _ = stringOfList (fun x -> x) ["foo"];;
                                     ^^^^^
Error: This expression has type string but an expression was expected of type
         int
